--- a/html/index.html
+++ b/html/index.html
@@ -462,8 +462,8 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
 
 
     <div class="wrapper">
-      <div class="Grid Grid--full Grid--gutter">
-        <div class="Grid-cell cardNoEffect1">
+      <div class="Grid Grid--full Grid--gutter cardNoEffect1">
+        <div class="Grid-cell">
           <div class="element">
             <p class="card25CardMeta">Business - Facing • Q3 2025 (Paused)
 
@@ -621,8 +621,9 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
 
 
     <div class="wrapper">
-      <div class="Grid Grid--full Grid--gutter">
-        <div class="Grid-cell cardNoEffect1">
+      <div class="Grid Grid--full Grid--gutter cardNoEffect1">
+        <div class="Grid-cell">
+
           <div class="element">
             <p class="card25CardMeta">Consumer - Facing • Q3 2025 • Concept + IA direction (paused)
 
@@ -639,8 +640,8 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
     </div>
     <div class="spacingLarge"></div>
     <div class="wrapper">
-      <div class="Grid Grid--full Grid--gutter">
-        <div class="Grid-cell cardNoEffect1">
+      <div class="Grid Grid--full Grid--gutter cardNoEffect1">
+        <div class="Grid-cell">
           <div class="element">
             <p class="card25CardMeta">Concept Exploration • Q4 2025</p>
             <h2 class="card25CardTitle">Explored an alternative marketplace model to reduce Gear-First UX friction</h2>
@@ -694,7 +695,7 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
     <div class="Grid-cell">
       <div class="element">
         <div class="row centerVer">
-          <h4 class="fontWeight500">RX Zero (Research &amp; IA)</h5>
+          <h4 class="fontWeight500">RX Zero (Research &amp; IA)</h4>
             <a href="/refining_rx_zero/" class="textUnderline paddingS">
               <h6 class="fontWeight300">View Project</h6>
             </a>
@@ -712,7 +713,7 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
     <div class="Grid-cell">
       <div class="element">
         <div class="row centerVer">
-          <h4 class="fontWeight500">Glorify App (Concept + Structure)</h5>
+          <h4 class="fontWeight500">Glorify App (Concept + Structure)</h4>
             <a href="/glorify/" class="textUnderline paddingS">
               <h6 class="fontWeight300">View Project</h6>
             </a>
@@ -743,7 +744,7 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
     <div class="Grid-cell">
       <div class="element">
         <div class="row centerVer">
-          <h4 class="fontWeight500">Marketing Insights Dashboard</h5>
+          <h4 class="fontWeight500">Marketing Insights Dashboard</h4>
             <a href="/seer/" class="textUnderline paddingS">
               <h6 class="fontWeight300">View Project</h6>
             </a>
@@ -761,7 +762,7 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
     <div class="Grid-cell">
       <div class="element">
         <div class="row centerVer">
-          <h4 class="fontWeight500">Interview Scheduling</h5>
+          <h4 class="fontWeight500">Interview Scheduling</h4>
             <a href="/appointa/" class="textUnderline paddingS">
               <h6 class="fontWeight300">View Project</h6>
             </a>
@@ -794,18 +795,27 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
     <div class="wrapper">
       <div class="Grid Grid--full Grid--gutter">
         <div class="element">
-          <div class="paddingL borderRadiusL gradient_background1">
+          <div class="paddingL borderRadiusL gradient_background1 displayDesktop">
             <a href="/design_system/">
-              <img class="displayDesktop" src="/projectImages/site25_desktop.svg" alt="Design System">
-              <img class="displayTablet" src="/projectImages/site25_tablet.svg" alt="Design System">
-              <img class="displayMobile" src="/projectImages/site25_mobile.svg" alt="Design System">
+              <img src="/projectImages/site25_desktop.svg" alt="Design System">
+            </a>
+          </div>
+
+          <div class="paddingL borderRadiusL gradient_background1 displayTablet">
+            <a href="/design_system/">
+              <img src="/projectImages/site25_tablet.svg" alt="Design System">
+            </a>
+          </div>
+ 
+          <div class="paddingL borderRadiusL gradient_background1 displayMobile">
+            <a href="/design_system/">
+              <img src="/projectImages/site25_mobile.svg" alt="Design System">
             </a>
           </div>
         </div>
+
+
       </div>
-
-
-    </div>
 
   </section>
 
