--- a/html/index.html
+++ b/html/index.html
@@ -490,7 +490,7 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
     <div class="card__left">
       <p class="card25CardMeta">Business - Facing • 2021 - 2024</p>
       <h2 class="card25CardTitle">BookYourPet Platform Simplification &amp; Booking Flexibility</h2>
-      <h5 class="card25CardDescription">Rebuilt an over-engineered B2B platform into a configurable booking system that supports many pet-care business models without custom builds.</h5>
+      <h5 class="card25CardDescription">Rebuilt an over-engineered B2B platform into a configurable booking system that supports multiple pet-care business models without custom builds.</h5>
       <h5 class="card25CardList ">Unified services, pricing, duration, and add-ons into one flexible booking + calendar model</h5>
       <h5 class="card25CardList ">Reduced setup time, booking errors, and support load by aligning the UI with real business workflows</h5>
       <h5 class="card25CardList displayNone"></h5>
@@ -697,7 +697,7 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
         <div class="row centerVer">
           <h4 class="fontWeight500">RX Zero (Research &amp; IA)</h4>
             <a href="/refining_rx_zero/" class="textUnderline paddingS">
-              <h6 class="fontWeight300">View Project</h6>
+              <h6 class="fontWeight300">View</h6>
             </a>
         </div>
         <h5>Interview assignment focused on trust, pricing transparency, and adherence flows for a subscription-based medication model, explored through research synthesis, IA, and low-fidelity wireframes rather than visual design.</h5>
@@ -715,7 +715,7 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
         <div class="row centerVer">
           <h4 class="fontWeight500">Glorify App (Concept + Structure)</h4>
             <a href="/glorify/" class="textUnderline paddingS">
-              <h6 class="fontWeight300">View Project</h6>
+              <h6 class="fontWeight300">View</h6>
             </a>
         </div>
         <h5> Interview assignment exploring how daily worship could shift from solo habit to shared ritual, focused on structural framing and visual hierarchy rather than production constraints.</h5>
@@ -746,7 +746,7 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
         <div class="row centerVer">
           <h4 class="fontWeight500">Marketing Insights Dashboard</h4>
             <a href="/seer/" class="textUnderline paddingS">
-              <h6 class="fontWeight300">View Project</h6>
+              <h6 class="fontWeight300">View</h6>
             </a>
         </div>
         <h5> Exploration of dashboard structure and metric legibility, independent of backend feasibility.</h5>
@@ -764,7 +764,7 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
         <div class="row centerVer">
           <h4 class="fontWeight500">Interview Scheduling</h4>
             <a href="/appointa/" class="textUnderline paddingS">
-              <h6 class="fontWeight300">View Project</h6>
+              <h6 class="fontWeight300">View</h6>
             </a>
         </div>
         <h5>Built within a predefined UI template to test IA clarity, information density, and visual hierarchy under constraints.</h5>
