--- a/html/design_system/index.html
+++ b/html/design_system/index.html
@@ -7314,10 +7314,9 @@ strong {
 
             <h6 class="Grey700"> &#169; 2020 - 2025 vickywang.me</h6>
           </div>
-          <div class="element backToTop" id="backToTop">
-
-            <h5 class="">Back to top</h5>
-          </div>
+          <a class="element backToTop" id="backToTop">
+            <h5 class="textUnderline">Back to top </h5>
+          </a>
 
 
         </div>
