inventory management case study final

--- a/html/index.html
+++ b/html/index.html
@@ -277,46 +277,19 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
     <div class="card__left">
       <p class="card25CardMeta">Business Facing Partner Portal • Q3 2025</p>
       <h2 class="card25CardTitle">BabyQuip Inventory Management</h2>
-      <h5 class="card25CardDescription">Scaled inventory from hobbyist QPs to power users with a unified editing surface.</h5>
-      <h5 class="card25CardList ">3× faster edits for high-volume providers</h5>
+      <h5 class="card25CardDescription">Prevented supply decay by simplifying inventory updates at scale</h5>
+      <h5 class="card25CardList displayNone"></h5>
       <h5 class="card25CardList displayNone"></h5>
       <h5 class="card25CardList displayNone"></h5>
 
 
-      <div class=" card__cta">
-        <!-- Trigger 1 -->
-        <a href="" class="open-modal alignBottom cta" data-modal="modal1">
+
+      <div class="card__cta">
+        <a href="/bq_b2b_inventory_management">
           <button class="buttonMedium buttonPrimary">View Case Study</button>
         </a>
-
-        <!-- Modal 1 -->
-        <div id="modal1" class="modal hidden">
-          <span class="modal-close">
-            <img class="iconXforModal" src="../../icon/delete.svg" alt="×">
-          </span>
-          <div class="modal-content wrapperL">
-
-            <div class="column element">
-
-              <div class="containerCopy">
-                <div class="ClickandCopy">Email for access.</div>
-                <div class="copy-text">
-                  <input id="copyEmail" name="copyEmail" type="text" class="text" value="hello.vicky.w@gmail.com" readonly>
-                  <button class="centerHorz"> <img class="iconS" src="../icon/copyWt.svg">
-                  </button>
-                </div>
-              </div>
-              <h5 class="textItalic">&#160; &#160; I’ll reply with a link within 24 hours.</h5>
-            </div>
-          </div>
-        </div>
       </div>
       <div class="spacingXSmall displayMobile"></div>
-
-
-
-
-
     </div>
 
     <div class="card__right">
@@ -340,6 +313,7 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
       <h5 class="card25CardList displayNone"></h5>
       <h5 class="card25CardList displayNone"></h5>
       <h5 class="card25CardList displayNone"></h5>
+
 
 
       <div class=" card__cta">
@@ -400,6 +374,7 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
       <h5 class="card25CardList displayNone"></h5>
       <h5 class="card25CardList displayNone"></h5>
       <h5 class="card25CardList displayNone"></h5>
+
 
 
       <div class=" card__cta">
@@ -506,6 +481,7 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
       <h5 class="card25CardList displayNone"></h5>
 
 
+
       <div class=" card__cta">
         <!-- Trigger 1 -->
         <a href="" class="open-modal alignBottom cta" data-modal="modal1">
@@ -583,6 +559,7 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
       <h5 class="card25CardList displayNone"></h5>
       <h5 class="card25CardList displayNone"></h5>
       <h5 class="card25CardList displayNone"></h5>
+
 
 
       <div class=" card__cta">
